Prepare buildSrc for migration to Antora
Replace `AsciidoctorConventions` with `AntoraConventions` in
preparation for the migration to Antora.

See gh-33766